--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robo",
-  "homepage": "https://mianObaid14.github.io/Final_Robo",
+  "homepage": "https://mianObaid14.github.io/roboFriend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
